# neurix

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAY_STORE_LISTING.md  PRIVACY_POLICY.md  README.md  SECURITY.md  biome.json  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
.github/: ANDROID_SETUP.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
public/assets/fonts/: fonts.css
src/: App.tsx  constants.ts  global.d.ts  index.css  styled.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/src/: characters.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/chat/: storage.rs
src-tauri/src/commands/: character_cmds.rs  chat_cmds.rs  history_cmds.rs  mod.rs  model_cmds.rs  settings_cmds.rs
src-tauri/src/inference/: engine.rs  sampler.rs
src-tauri/src/models/: catalog.rs  download.rs  manager.rs
src/components/: index.ts
src/components/character/: CharacterPicker.tsx
src/components/layout/: AppLayout.tsx  BottomNav.tsx  index.ts
src/components/ui/: Button.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  Icon.tsx  Input.tsx  NeurixLogo.tsx  OfflineBanner.tsx  Toast.tsx  index.ts
src/context/: AppContext.tsx  CharacterContext.tsx  DownloadContext.tsx
src/pages/: AboutPage.tsx  CharacterEditPage.tsx  ChatHistoryPage.tsx  ChatPage.tsx  DownloadingPage.tsx  ModelDetailPage.tsx  ModelStorePage.tsx  MyModelsPage.tsx  OnboardingScreen.tsx  SettingsPage.tsx  SplashScreen.tsx  WelcomeScreen.tsx
src/services/: characterService.ts  chatService.ts  historyService.ts  index.ts  modelService.ts  notificationService.ts  settingsService.ts  types.ts
src/theme/: GlobalStyles.ts  index.ts  theme.ts  tokens.ts
src/utils/: characterAccent.ts  characterShare.test.ts  characterShare.ts  cleanResponse.test.ts  cleanResponse.ts
