[package]
name = "neurix-tauri"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
simple_logger = "5.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "neurix_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "neurix-tauri"
path = "src/main.rs"

[workspace]
