[package]
name = "neurix-tauri"
version = "0.3.2"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-http = { version = "2.0", default-features = false }
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
simple_logger = "5.0"
candle-core = "0.9"
candle-transformers = "0.9"
candle-nn = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
rand = "0.8"
rayon = "1"
fs2 = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "neurix_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "neurix-tauri"
path = "src/main.rs"

[profile.release]
opt-level = 2       # Level 2 for fast matmul/inference (was "s" for size — too slow for ML)
lto = true
strip = true
codegen-units = 1
panic = "abort"

[workspace]
